@@ -230,6 +230,10 @@ use_perl_cache=on
 #internal_check_nsc_web = 1
 
 
+# use internal check_dummy plugin
+#internal_check_dummy = 1
+
+
 # Prometheus
 # export prometheus metrics
 #prometheus_server=127.0.0.1:9050
